# roselite

./: .gitignore  404.html  Cargo.toml  README.md  index.html  jdbohrman_tech.veilidpkg  mkdocs.yml  requirements.txt
.cache/roselite-test-site/: about.html  index.html
.github/workflows/: docs.yml
.roselite/: insecure_keyring_roselite  roselite_4tFjs8mj09wSz47ZA-FfgDJVpq7o9Aef-ZXJFg2AEeY  roselite_D7SW99HPoYQiOqbR398NDk3hIMZhPn56d42R7qlNq30  roselite_IzMx2VSXge01xqvoFOFn4y-EoHDehmHw5GL8biGLauk  roselite_JZ53QhkwujFTUFhgrdWW9y6OaTqMCtr1_-hH6dAd8T0  roselite___veilid_all_tables  roselite_eVaFBHlcvnmqOKtagBMnZ9l5JuK-54lb8uZwQHTjP4A  roselite_rHtgyt__KEiK5PzduwgAd3tpGgMJhtslCYmVC3SYyTo
architecture/: index.html
bundles/www.jdbohrman.tech/: 404.html
bundles/www.jdbohrman.tech/_next/static/chunks/: main-app-ab074f8469a102ea.js
bundles/www.jdbohrman.tech/_next/static/chunks/app/: layout-4438846e99d5ff5d.js  page-30bffa25e8bee112.js
bundles/www.jdbohrman.tech/_next/static/css/: 6bc50c3338e040e7.css
cli/: index.html
contribute/: index.html
crates/roselite-cli/: Cargo.toml
crates/roselite-cli/src/: main.rs
crates/roselite-core/src/: error.rs  lib.rs  package.rs  store.rs
crates/roselite-store/: Cargo.toml
crates/roselite-store/src/: main.rs
docs/: README.md  astro.config.mjs  cli.md  index.md  installation.md  mkdocs.yml  package.json  pnpm-lock.yaml  publishing.md  quickstart.md
docs/architecture/: index.md
docs/assets/: .gitkeep
docs/contribute/: index.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/overrides/: main.html
docs/reference/: cli-commands.md  index.md
docs/sponsor/: index.md
docs/src/content/docs/: architecture.md  index.mdx
docs/src/content/docs/api/: gateway-api.md
docs/src/content/docs/cli/: commands.md
docs/src/content/docs/community/: contributing.md
docs/src/content/docs/getting-started/: index.md  installation.md  quick-start.md
docs/src/content/docs/help/: faq.md
docs/src/content/docs/reference/: veilidpkg-format.md
docs/src/styles/: custom.css
docs/stylesheets/: extra.css
examples/jdbohrman.tech/: index.html
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
installation/: index.html
overrides/: home.html
publishables/jdbohrman.tech/: index.txt
publishables/jdbohrman.tech/_next/static/chunks/: 28-253a740404c20b3e.js  ede5dfc2-e2d7cea170ca69f1.js
publishing/: index.html
quickstart/: index.html
reference/: index.html
reference/cli-commands/: index.html
roselite-api/: Cargo.toml
roselite-cli/: Cargo.toml
roselite-cli/src/: gateway.rs  local.rs  main.rs
roselite-core/: Cargo.toml
roselite-core/src/: crypto.rs  package.rs  store.rs  types.rs  veilid.rs
roselite-gateway/: Cargo.toml
roselite-gateway/src/: main.rs
search/: search_index.json
site/: 404.html  index.html  mkdocs.yml  requirements.txt  sitemap.xml
site/architecture/: index.html
site/cli/: index.html
site/contribute/: index.html
site/getting-started/installation/: index.html
site/getting-started/quick-start/: index.html
site/installation/: index.html
site/publishing/: index.html
site/quickstart/: index.html
site/sponsor/: index.html
site/stylesheets/: extra.css
sponsor/: index.html
stylesheets/: extra.css
