[workspace]
members = [
    "roselite-core",
    "roselite-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["James Bohrman <jdbohrman@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdbohrman-tech/roselite"
description = "Decentralized app store for Veilid network"

[workspace.dependencies]
roselite-core = { path = "roselite-core" }

# Core async runtime
tokio = { version = "1.0", features = ["full", "tracing"] }

# Veilid for DHT networking
veilid-core = "0.4.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
color-eyre = "0.6"

# CLI tools
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"

# TUI framework  
ratatui = "0.28"
crossterm = "0.28"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# QR code generation
qrcode = "0.14"

# URL parsing
url = "2.5"

# Fuzzy matching for search
fuzzy-matcher = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10" 