[dependencies]
# Existing
roselite-core = { path = "../roselite-core" }

# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4"] }

# File handling
tempfile = "3.0"
zip = "0.6"

# Monitoring
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.21"

# Config
config = "0.13"