[package]
name = "roselite-gateway"
version = "0.1.0"
edition = "2021"
authors = ["JD Bohrman <jd@jdbohrman.tech>"]
description = "Veilid Gateway Server for Roselite Apps"

[dependencies]
# Core dependencies
roselite-core = { path = "../roselite-core" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server
axum = { version = "0.7", features = ["tokio"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip"] }

# TLS/SSL
rustls = "0.22"
rustls-pemfile = "2.0"

# HTTP utilities
hyper = { version = "1.0", features = ["full"] }
mime_guess = "2.0"

# Async utilities
futures = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Environment
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.0" 