[package]
name = "roselite-gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Veilid Gateway Server for Roselite Apps"

[dependencies]
# Core dependencies
roselite-core = { path = "../roselite-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP server
axum = { version = "0.7", features = ["tokio"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip"] }

# TLS/SSL
rustls = "0.22"
rustls-pemfile = "2.0"

# HTTP utilities
hyper = { version = "1.0", features = ["full"] }
mime_guess = "2.0"

# Async utilities
futures = "0.3"

# CLI
clap = { workspace = true }

# Environment
dotenvy = "0.15"

# Error handling
color-eyre = { workspace = true }

[dev-dependencies]
tempfile = "3.0" 