[package]
name = "roselite-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for Roselite - Veilid app package management"

[[bin]]
name = "roselite"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
roselite-core = { path = "../roselite-core" }
tokio = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

# Additional dependencies
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
qrcode = "0.14"
url = "2.5"
dirs = "5.0"
tar = "0.4"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] } 