[package]
name = "roselite-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI app store for Roselite - Browse and install Veilid apps"

[[bin]]
name = "roselite-store"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
roselite-core = { path = "../roselite-core" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

# Additional dependencies
fuzzy-matcher = "0.3"
flate2 = "1.0"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0" 